--- a/frontend/src/components/Footer/Footer.module.css
+++ b/frontend/src/components/Footer/Footer.module.css
@@ -16,7 +16,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 1rem;
-  padding: 30px 60px;
+  padding: 2rem 6%;
   background-color: var(--gray);
 }
 
