profile page added

--- a/frontend/src/pages/Auth/Auth.module.css
+++ b/frontend/src/pages/Auth/Auth.module.css
@@ -46,12 +46,12 @@
   margin: 1rem 0.2rem 1rem 2rem;
 }
 
-p {
-  text-align: center;
-}
-
 .actions-container {
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
+}
+
+.actions-container p {
+  text-align: center;
 }
