--- a/frontend/src/pages/User/User.module.css
+++ b/frontend/src/pages/User/User.module.css
@@ -1,6 +1,21 @@
 .user {
-  width: 60%;
   display: flex;
   flex-direction: column;
   margin: 5rem auto;
+}
+
+.products-container {
+  margin: 5rem 0;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 480px) {
+  .heading h2 {
+    font-size: 1rem;
+  }
 }
