--- a/frontend/src/components/ProductCard/ProductCard.module.css
+++ b/frontend/src/components/ProductCard/ProductCard.module.css
@@ -8,6 +8,12 @@
   border-radius: 5px;
   transition: box-shadow ease-in 0.3s;
   cursor: pointer;
+  text-decoration: none;
+}
+
+.card a {
+  text-decoration: none;
+  color: var(--dark);
 }
 
 .card:hover {
