--- a/frontend/src/pages/Cart/CartItem/CartItem.module.css
+++ b/frontend/src/pages/Cart/CartItem/CartItem.module.css
@@ -39,3 +39,10 @@
   border-color: black;
   border-style: solid;
 }
+
+@media (max-width: 780px) {
+  .cart-item {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
