--- a/frontend/src/pages/Cart/CartList/CartList.module.css
+++ b/frontend/src/pages/Cart/CartList/CartList.module.css
@@ -4,3 +4,10 @@
   gap: 3rem;
   margin: 2rem 3rem;
 }
+
+@media (max-width: 780px) {
+  .cart-list {
+    width: 90%;
+    margin: 2rem auto;
+  }
+}
