--- a/frontend/src/components/ProductCard/ProductCard.module.css
+++ b/frontend/src/components/ProductCard/ProductCard.module.css
@@ -6,7 +6,7 @@
   padding: 1.4rem;
   gap: 2rem;
   border-radius: 5px;
-  transition: box-shadow ease-in 0.3s;
+  transition: box-shadow ease-in 0.2s;
   cursor: pointer;
   text-decoration: none;
 }
@@ -17,17 +17,20 @@
 }
 
 .card:hover {
-  box-shadow: 2px 2px 10px 3px rgba(0, 0, 0, 0.7);
+  box-shadow: 2px 2px 10px 3px rgba(31, 31, 31, 0.7);
 }
 
 .image-container {
   display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 1rem;
   border-radius: 4px;
+  min-height: 200px;
 }
 
 .image-container img {
-  max-height: 150px;
+  min-width: 180px;
   max-width: 250px;
 }
 
