--- a/frontend/src/pages/Cart/CartList/CartList.module.css
+++ b/frontend/src/pages/Cart/CartList/CartList.module.css
@@ -5,7 +5,7 @@
   margin: 2rem 3rem;
 }
 
-@media (max-width: 780px) {
+@media screen and (max-width: 780px) {
   .cart-list {
     width: 90%;
     margin: 2rem auto;
