--- a/frontend/src/pages/PDP/PDP.module.css
+++ b/frontend/src/pages/PDP/PDP.module.css
@@ -1,7 +1,7 @@
 .pdp {
   display: flex;
   flex-flow: column;
-  gap: 2rem;
+  gap: 1rem;
   margin: 3rem 0;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .pdp__image img {
-  max-width: 60vw;
+  max-width: 50vw;
   object-fit: contain;
 }
 
@@ -53,6 +53,11 @@
     flex-direction: column;
     align-items: center;
   }
+  .pdp__title-price {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 
 @media screen and (max-width: 760px) {
@@ -62,5 +67,8 @@
   }
   .pdp__title h1 {
     font-size: 1rem;
+  }
+  .pdp__description p {
+    font-size: 0.8rem;
   }
 }
