--- a/frontend/src/components/CategoryLinks/CategoryLinks.module.css
+++ b/frontend/src/components/CategoryLinks/CategoryLinks.module.css
@@ -1,6 +1,7 @@
 .category {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   gap: 2rem;
 }
 
