--- a/frontend/src/pages/User/User.module.css
+++ b/frontend/src/pages/User/User.module.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 2rem 0;
 }
 
 @media screen and (max-width: 480px) {
